--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
+  height: auto !important;
+  overflow-y: visible !important;
   margin: 0;
   min-width: 320px;
+}
+
+body {
   min-height: 100vh;
+}
+
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 * {
